# spin

./: .gitignore  LICENSE  README.md  spin.cabal
examples/Spin/: Demo.hs
scripts/: codegen
src/Spin/: Functions.hs  Specs.hs  Types.hs
