name:                spin
version:             0.0.1
synopsis:            Elegant, emoji-based loading spinners to make your Haskell CLI applications more beautiful.
homepage:            https://github.com/alexanderGugel/spin
bug-reports:         https://github.com/alexanderGugel/spin/issues
license:             MIT
license-file:        LICENSE
author:              Alexander Gugel <alexander.gugel@gmail.com>
maintainer:          Alexander Gugel <alexander.gugel@gmail.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     examples/Spin/Demo.hs

library
  exposed-modules:     Spin.Types
                       Spin.Specs
                       Spin.Functions
  build-depends:       base >=4.8 && <5,
                       mtl >=2.2 && <3,
                       ansi-terminal >=0.9 && <1,
                       transformers >=0.5 && < 0.6,
                       async >=2.2 && <3
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-options:         -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: git://github.com/alexanderGugel/spin.git
